# techrole-index

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  ANALYTICS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  DATA_SOURCES.md  DECISIONS.md  DEPLOYMENT.md  GROWTH.md  HANDOFF.md  HOSTING.md  METHODOLOGY.md  PAYMENTS.md  README.md  SEARCH_AI.md  SECURITY.md  codemeta.json  compose.observability.yaml  compose.production.yaml  compose.public.yaml  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  dagster.yaml  gunicorn.conf.py  pyproject.toml  workspace.yaml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  ai_benchmark.py  config.py  dagster_defs.py  database.py  demo_accounts.py  main.py  materialize_publication_metrics.py  models.py  observability.py  reclassify_open_data.py  schemas.py  security.py  seed.py  worker.py
backend/sql/: profession_metrics_daily.sql  profession_trends.sql
backend/tests/: conftest.py  test_ai_benchmark.py  test_ai_provider.py  test_api_paywall.py  test_auth_rate_limit.py  test_cache.py  test_classifier.py  test_currency.py  test_currency_rate_snapshots.py  test_dagster_defs.py  test_demo_provider.py  test_hh_guard.py  test_indexnow.py  test_main.py  test_mentorship.py  test_migrations.py  test_open_data_ingestion.py  test_payment_providers.py  test_payment_readiness.py  test_payment_reconciliation.py  test_payments.py  test_production_config.py  test_publication_metrics.py  test_reclassification.py  test_salary.py  test_salary_benchmarks.py  (+9 more)
(+240 files in other folders)
