[project]
name = "techrole-index-backend"
version = "0.1.0"
description = "API and data pipeline for TechRole Index"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "celery[redis]>=5.4,<6",
  "dagster>=1.13,<2",
  "dagster-webserver>=1.13,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "gunicorn>=23,<27",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "prometheus-client>=0.21,<1",
  "PyJWT>=2.10,<3",
  "pwdlib[argon2]>=0.2,<1",
  "python-json-logger>=3.2,<5",
  "python-multipart>=0.0.20,<1",
  "redis>=5.2,<9",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<3",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501", "UP017"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
